--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,6 @@ cython_debug/
 
 # Cookies file for the LinkedIn scraper
 linkedin_cookies.pkl
+
+# Excel file with the scraped data
+subscribed_newsletters.xlsx
